objects/Compensation_Estimator__c.object
<CustomObject>
    <fields>
        <fullName>Renewal_Disability_Commission__c</fullName>
        <label>Renewal Disability Commission</label>
        <summarizedField>Compensation_Estimator_Product__c.Base_Payment__c</summarizedField>
        <summaryFilterItems>
            <field>Compensation_Estimator_Product__c.Include__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Compensation_Estimator_Product__c.Line_of_Business__c</field>
            <operation>equals</operation>
            <value>Disability</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Compensation_Estimator_Product__c.Sales_Type__c</field>
            <operation>equals</operation>
            <value>Renewals</value>
        </summaryFilterItems>
        <summaryForeignKey>Compensation_Estimator_Product__c.Compensation_Estimator__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Renewal_Life_Commission__c</fullName>
        <label>Renewal Life Commission</label>
        <summarizedField>Compensation_Estimator_Product__c.Base_Payment__c</summarizedField>
        <summaryFilterItems>
            <field>Compensation_Estimator_Product__c.Include__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Compensation_Estimator_Product__c.Sales_Type__c</field>
            <operation>equals</operation>
            <value>Renewals</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Compensation_Estimator_Product__c.Line_of_Business__c</field>
            <operation>equals</operation>
            <value>Life</value>
        </summaryFilterItems>
        <summaryForeignKey>Compensation_Estimator_Product__c.Compensation_Estimator__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Renewal_Medical_Commission__c</fullName>
        <label>Renewal Medical Commission</label>
        <summarizedField>Compensation_Estimator_Product__c.Base_Payment__c</summarizedField>
        <summaryFilterItems>
            <field>Compensation_Estimator_Product__c.Include__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Compensation_Estimator_Product__c.Sales_Type__c</field>
            <operation>equals</operation>
            <value>Renewals</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Compensation_Estimator_Product__c.Line_of_Business__c</field>
            <operation>equals</operation>
            <value>Medical</value>
        </summaryFilterItems>
        <summaryForeignKey>Compensation_Estimator_Product__c.Compensation_Estimator__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Renewal_Supplemental_Commission__c</fullName>
        <label>Renewal Supplemental Commission</label>
        <summarizedField>Compensation_Estimator_Product__c.Base_Payment__c</summarizedField>
        <summaryFilterItems>
            <field>Compensation_Estimator_Product__c.Include__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Compensation_Estimator_Product__c.Line_of_Business__c</field>
            <operation>equals</operation>
            <value>Supplemental</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Compensation_Estimator_Product__c.Sales_Type__c</field>
            <operation>equals</operation>
            <value>Renewals</value>
        </summaryFilterItems>
        <summaryForeignKey>Compensation_Estimator_Product__c.Compensation_Estimator__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Renewal_Vision_Commission__c</fullName>
        <label>Renewal Vision Commission</label>
        <summarizedField>Compensation_Estimator_Product__c.Base_Payment__c</summarizedField>
        <summaryFilterItems>
            <field>Compensation_Estimator_Product__c.Include__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Compensation_Estimator_Product__c.Line_of_Business__c</field>
            <operation>equals</operation>
            <value>Vision</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Compensation_Estimator_Product__c.Sales_Type__c</field>
            <operation>equals</operation>
            <value>Renewals</value>
        </summaryFilterItems>
        <summaryForeignKey>Compensation_Estimator_Product__c.Compensation_Estimator__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Supplemental_Included__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Supplemental</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Commissions_Single_Field__c</fullName>
        <defaultValue>&quot;$0.00&quot;</defaultValue>
        <description>This is populated via the Compensation Estimator process builder due to the length of the formulas.  When the formula for all 6 lines of business is compiled, it exceeds the 5000 character limit for formula fields.  A process builder does not have this character limit.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Displays the total commissions in a single field</inlineHelpText>
        <label>Total Commissions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Commissions__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>This is populated via the Compensation Estimator process builder due to the length of the formulas.  When the formula for all 6 lines of business is compiled, it exceeds the 5000 character limit for formula fields.  A process builder does not have this character limit.</description>
        <label>Total Commissions</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Dental_Commission__c</fullName>
        <formula>New_Bus_Total_Dental_Commissions__c +  Renewal_Dental_Commission__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Dental Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Disability_Commission__c</fullName>
        <formula>New_Bus_Total_Disability_Commissions__c +  Renewal_Disability_Commission__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Disability Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Kicker__c</fullName>
        <formula>New_Business_Medical_Kicker__c + New_Business_Vision_Kicker__c  + New_Business_Dental_Kicker__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Kicker</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Life_Commission__c</fullName>
        <formula>New_Bus_Total_Life_Commissions__c + Renewal_Life_Commission__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Life Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Medical_Commission__c</fullName>
        <formula>New_Bus_Total_Medical_Commissions__c +  Renewal_Medical_Commission__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Medical Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Specialty_Commission__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Specialty Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Supplemental_Commission__c</fullName>
        <formula>New_Bus_Total_Supplemental_Commissions__c +  Renewal_Supplemental_Commission__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Supplemental Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Vision_Commission__c</fullName>
        <formula>New_Bus_Total_Vision_Commissions__c +  Renewal_Vision_Commission__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Vision Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vision_Included__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select to include Vision in the estimate</inlineHelpText>
        <label>Vision</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ZZZ_DELETE_New_Business_Dental_Goal__c</fullName>
        <label>ZZZ_DELETE_New Business Dental Goal</label>
        <summarizedField>Compensation_Estimator_Product__c.Goal__c</summarizedField>
        <summaryFilterItems>
            <field>Compensation_Estimator_Product__c.Include__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Compensation_Estimator_Product__c.Goal_Eligible__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Compensation_Estimator_Product__c.Line_of_Business__c</field>
            <operation>equals</operation>
            <value>Dental</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Compensation_Estimator_Product__c.Sales_Type__c</field>
            <operation>equals</operation>
            <value>New Business</value>
        </summaryFilterItems>
        <summaryForeignKey>Compensation_Estimator_Product__c.Compensation_Estimator__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ZZZ_DELETE_New_Business_Medical_Goal__c</fullName>
        <label>ZZZ DELETE New Business Medical Goal</label>
        <summarizedField>Compensation_Estimator_Product__c.Goal__c</summarizedField>
        <summaryFilterItems>
            <field>Compensation_Estimator_Product__c.Include__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Compensation_Estimator_Product__c.Goal_Eligible__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Compensation_Estimator_Product__c.Line_of_Business__c</field>
            <operation>equals</operation>
            <value>Medical</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Compensation_Estimator_Product__c.Sales_Type__c</field>
            <operation>equals</operation>
            <value>New Business</value>
        </summaryFilterItems>
        <summaryForeignKey>Compensation_Estimator_Product__c.Compensation_Estimator__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ZZZ_DELETE_New_Business_Vision_Goal__c</fullName>
        <label>ZZZ DELETE New Business Vision Goal</label>
        <summarizedField>Compensation_Estimator_Product__c.Goal__c</summarizedField>
        <summaryFilterItems>
            <field>Compensation_Estimator_Product__c.Include__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Compensation_Estimator_Product__c.Goal_Eligible__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Compensation_Estimator_Product__c.Line_of_Business__c</field>
            <operation>equals</operation>
            <value>Vision</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Compensation_Estimator_Product__c.Sales_Type__c</field>
            <operation>equals</operation>
            <value>New Business</value>
        </summaryFilterItems>
        <summaryForeignKey>Compensation_Estimator_Product__c.Compensation_Estimator__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ZZZ_DELETE_Total_Commission__c</fullName>
        <formula>Total_Medical_Commission__c +  Total_Vision_Commission__c +  Total_Dental_Commission__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ZZZ DELETE Total Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ZZZ_DELETE_Total_Specialty_Commission__c</fullName>
        <formula>Total_Life_Commission__c +  Total_Disability_Commission__c +  Total_Supplemental_Commission__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ZZZ DELETE Total Specialty Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Compensation Estimator</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>January_2020_Estimates</fullName>
        <columns>NAME</columns>
        <columns>Total_Medical_Commission__c</columns>
        <columns>Total_Dental_Commission__c</columns>
        <columns>Total_Vision_Commission__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>January</value>
        </filters>
        <label>January YTD 2020 Estimates</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>November</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Nov</value>
        </filters>
        <label>November</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Compensation Estimate Parent</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Compensation Estimations</pluralLabel>
    <recordTypes>
        <fullName>Compensation_Estimator</fullName>
        <active>true</active>
        <label>Compensation Estimator</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Line_of_Business_Required</fullName>
        <active>true</active>
        <description>Requires user to select at least one line of business</description>
        <errorConditionFormula>AND(

NOT(  Medical_Included__c ),
NOT(  Dental_Included__c ),
NOT(  Vision_Included__c ),
NOT(  Life_Included__c ),
NOT(  Disability_Included__c ),
NOT(  Supplemental_Included__c )

)</errorConditionFormula>
        <errorMessage>You must select at least one Line of Business -- Medical, Dental, Vision, Life, Disability, or Supplemental</errorMessage>
    </validationRules>
</CustomObject>